--- a/merch.html
+++ b/merch.html
@@ -73,7 +73,7 @@
     <div class="hero-content">
       <img src="Photos/logo.png" alt="Restigouche Dojo Logo" class="hero-logo" />
       <h2 class="motto">Merch — Pre-Order Only</h2>
-      <a href="about.html#contact" class="btn btn-primary">Send us a message</a>
+      <a href="aboutus.html#contact" class="btn btn-primary">Send us a message</a>
     </div>
   </section>
 
@@ -84,7 +84,7 @@
       <p style="max-width: 900px; margin: 0 auto; color:#EEE;">
         Most items are <strong>pre-ordered</strong> so we can get the
         right sizes and styles for everyone. A small number may be in stock from time to time, but availability changes quickly.
-        To place an order or ask a question, click <a class="learn-more" href="about.html#contact">Send us a message</a>.
+        To place an order or ask a question, click <a class="learn-more" href="aboutus.html#contact">Send us a message</a>.
       </p>
     </div>
   </section>
@@ -104,7 +104,7 @@
           <p class="note" style="margin: .35rem 0 1rem;">
             Cozy mid-weight hoodie with front logo; seasonal drop.
           </p>
-          <a href="about.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Black Hoodie">
+          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Black Hoodie">
             Send us a message
           </a>
         </div>
@@ -117,7 +117,7 @@
           <p class="note" style="margin: .35rem 0 1rem;">
             Everyday tee with classic crest; multiple colorways over the year.
           </p>
-          <a href="about.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Classic Tee">
+          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Classic Tee">
             Send us a message
           </a>
         </div>
@@ -130,7 +130,7 @@
           <p class="note" style="margin: .35rem 0 1rem;">
             Limited-edition camo vibe with bison/maple-leaf identity. Drops are time-boxed.
           </p>
-          <a href="about.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Limited Hoodie">
+          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Limited Hoodie">
             Send us a message
           </a>
         </div>
@@ -143,7 +143,7 @@
           <p class="note" style="margin: .35rem 0 1rem;">
             Cold-weather essential with subtle crest. Seasonal restocks.
           </p>
-          <a href="about.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Beanie">
+          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Beanie">
             Send us a message
           </a>
         </div>
@@ -157,7 +157,7 @@
           <p class="note" style="margin: .35rem 0 1rem;">
             Clean, structured fit. Occasionally in stock, but most orders are pre-order.
           </p>
-          <a href="about.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Snapback Hat">
+          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Snapback Hat">
             Send us a message
           </a>
         </div>
@@ -165,7 +165,7 @@
       </div>
 
       <p class="note" style="margin-top:1rem;">
-        Want a size or color you don’t see here? <a class="learn-more" href="about.html#contact">Send us a message</a>
+        Want a size or color you don’t see here? <a class="learn-more" href="aboutus.html#contact">Send us a message</a>
       </p>
     </div>
   </section>
