--- a/merch.html
+++ b/merch.html
@@ -97,7 +97,7 @@
       <div class="program-grid">
         <!-- ===== COPY/PASTE this .program-card block to add more items ===== -->
         <div class="program-card">
-          <img class="merch-thumb" src="Photos/merch/hoodie-black.jpg" alt="Restigouche Dojo Black Hoodie" />
+          <img class="merch-thumb" src="Photos/hoodie.png" alt="Restigouche Dojo Black Hoodie" />
           <h3 class="merch-title">
             Black Hoodie <span class="badge-preorder">PRE-ORDER</span>
           </h3>
