--- a/merch.html
+++ b/merch.html
@@ -110,12 +110,12 @@
         </div>
 
         <div class="program-card">
-          <img class="merch-thumb" src="Photos/merch/tee-classic.jpg" alt="Restigouche Dojo Classic T-Shirt" />
+          <img class="merch-thumb" src="Photos/tshirt.png" alt="Restigouche Dojo Classic T-Shirt" />
           <h3 class="merch-title">
             Classic Tee <span class="badge-preorder">PRE-ORDER</span>
           </h3>
           <p class="note" style="margin: .35rem 0 1rem;">
-            Everyday tee with classic crest; multiple colorways over the year.
+            Everyday tee with classic crest.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Classic Tee">
             Send us a message
