--- a/merch.html
+++ b/merch.html
@@ -102,9 +102,22 @@
             Black Hoodie <span class="badge-preorder">PRE-ORDER</span>
           </h3>
           <p class="note" style="margin: .35rem 0 1rem;">
-            Cozy mid-weight hoodie with front logo; seasonal drop.
+            Cozy mid-weight hoodie with front and back logo.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Black Hoodie">
+            Send us a message
+          </a>
+        </div>
+
+        <div class="program-card">
+          <img class="merch-thumb" src="Photos/creneck.png" alt="Restigouche Dojo Black Crewneck" />
+          <h3 class="merch-title">
+            Black Crewneck <span class="badge-preorder">PRE-ORDER</span>
+          </h3>
+          <p class="note" style="margin: .35rem 0 1rem;">
+            Cozy mid-weight crewneck with front logo and back logo.
+          </p>
+          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Black Crewneck">
             Send us a message
           </a>
         </div>
