--- a/merch.html
+++ b/merch.html
@@ -163,14 +163,14 @@
 
         <!-- Example “in stock sometimes” note (still pre-order wording) -->
         <div class="program-card">
-          <img class="merch-thumb" src="Photos/merch/hat-snapback.jpg" alt="Restigouche Dojo Snapback Hat" />
+          <img class="merch-thumb" src="Photos/baseballhat.png" alt="Restigouche Dojo Baseball Hat" />
           <h3 class="merch-title">
-            Snapback Hat <span class="badge-preorder">PRE-ORDER</span>
+            Baseball Hat <span class="badge-preorder">PRE-ORDER</span>
           </h3>
           <p class="note" style="margin: .35rem 0 1rem;">
             Clean, structured fit. Occasionally in stock, but most orders are pre-order.
           </p>
-          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Snapback Hat">
+          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Baseball Hat">
             Send us a message
           </a>
         </div>
