--- a/merch.html
+++ b/merch.html
@@ -110,7 +110,7 @@
         </div>
 
         <div class="program-card">
-          <img class="merch-thumb" src="Photos/creneck.png" alt="Restigouche Dojo Black Crewneck" />
+          <img class="merch-thumb" src="Photos/crewneck.png" alt="Restigouche Dojo Black Crewneck" />
           <h3 class="merch-title">
             Black Crewneck <span class="badge-preorder">PRE-ORDER</span>
           </h3>
