--- a/merch.html
+++ b/merch.html
@@ -141,7 +141,20 @@
             Limited “Hunting Season” Hoodie <span class="badge-preorder">PRE-ORDER</span>
           </h3>
           <p class="note" style="margin: .35rem 0 1rem;">
-            Limited-edition camo vibe with bison/maple-leaf identity. Drops are time-boxed.
+            Limited-edition camo vibe.
+          </p>
+          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Limited Hoodie">
+            Send us a message
+          </a>
+        </div>
+
+           <div class="program-card">
+          <img class="merch-thumb" src="Photos/merch/hoodie-camo.jpg" alt="Restigouche Dojo Limited Camo Hoodie" />
+          <h3 class="merch-title">
+            Limited “Orange Hunting Season” Hoodie <span class="badge-preorder">PRE-ORDER</span>
+          </h3>
+          <p class="note" style="margin: .35rem 0 1rem;">
+            Limited-edition camo vibe.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Limited Hoodie">
             Send us a message
