--- a/merch.html
+++ b/merch.html
@@ -97,66 +97,80 @@
       <div class="program-grid">
         <!-- ===== COPY/PASTE this .program-card block to add more items ===== -->
         <div class="program-card">
-          <img class="merch-thumb" src="Photos/hoodie.png" alt="Restigouche Dojo Black Hoodie" />
+          <img class="merch-thumb" src="Photos/bjjhoodie.png" alt="Restigouche Dojo Black BJJ Hoodie" />
           <h3 class="merch-title">
-            Black Hoodie <span class="badge-preorder">PRE-ORDER</span>
+            Black BJJ Hoodie <span class="badge-preorder">PRE-ORDER</span>
           </h3>
           <p class="note" style="margin: .35rem 0 1rem;">
             Cozy mid-weight hoodie with front and back logo.
           </p>
-          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Black Hoodie">
+          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Black BJJ Hoodie">
             Send us a message
           </a>
         </div>
 
-        <div class="program-card">
-          <img class="merch-thumb" src="Photos/crewneck.png" alt="Restigouche Dojo Black Crewneck" />
+                <div class="program-card">
+          <img class="merch-thumb" src="Photos/judohoodie.png" alt="Restigouche Dojo Black Judo Hoodie" />
           <h3 class="merch-title">
-            Black Crewneck <span class="badge-preorder">PRE-ORDER</span>
+            Black Judo Hoodie <span class="badge-preorder">PRE-ORDER</span>
+          </h3>
+          <p class="note" style="margin: .35rem 0 1rem;">
+            Cozy mid-weight hoodie with front and back logo.
+          </p>
+          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Black Judo Hoodie">
+            Send us a message
+          </a>
+        </div>
+        
+
+        <div class="program-card">
+          <img class="merch-thumb" src="Photos/bjjcrewneck.png" alt="Restigouche Dojo Black BJJ Crewneck" />
+          <h3 class="merch-title">
+            Black BJJ Crewneck <span class="badge-preorder">PRE-ORDER</span>
           </h3>
           <p class="note" style="margin: .35rem 0 1rem;">
             Cozy mid-weight crewneck with front logo and back logo.
           </p>
-          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Black Crewneck">
+          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Black BJJ Crewneck">
             Send us a message
           </a>
         </div>
 
         <div class="program-card">
-          <img class="merch-thumb" src="Photos/tshirt.png" alt="Restigouche Dojo Classic T-Shirt" />
+          <img class="merch-thumb" src="Photos/bjjtshirt.png" alt="Restigouche Dojo Classic BJJ T-Shirt" />
           <h3 class="merch-title">
-            Classic Tee <span class="badge-preorder">PRE-ORDER</span>
+            Classic BJJ Tee <span class="badge-preorder">PRE-ORDER</span>
           </h3>
           <p class="note" style="margin: .35rem 0 1rem;">
             Everyday tee with classic crest.
           </p>
-          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Classic Tee">
+          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Classic BJJ Tee">
             Send us a message
           </a>
         </div>
 
         <div class="program-card">
-          <img class="merch-thumb" src="Photos/merch/hoodie-camo.jpg" alt="Restigouche Dojo Limited Camo Hoodie" />
+          <img class="merch-thumb" src="Photos/merch/bjjhoodie-camo.jpg" alt="Restigouche Dojo Limited Camo BJJ Hoodie" />
           <h3 class="merch-title">
-            Limited “Hunting Season” Hoodie <span class="badge-preorder">PRE-ORDER</span>
+            Limited “Hunting Season” BJJ Hoodie <span class="badge-preorder">PRE-ORDER</span>
           </h3>
           <p class="note" style="margin: .35rem 0 1rem;">
             Limited-edition camo vibe.
           </p>
-          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Limited Hoodie">
+          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Limited BJJ Hoodie">
             Send us a message
           </a>
         </div>
 
            <div class="program-card">
-          <img class="merch-thumb" src="Photos/merch/hoodie-camo.jpg" alt="Restigouche Dojo Limited Camo Hoodie" />
+          <img class="merch-thumb" src="Photos/merch/bjjhoodie-orange-camo.jpg" alt="Restigouche Dojo Limited Camo BJJ Hoodie" />
           <h3 class="merch-title">
-            Limited “Orange Hunting Season” Hoodie <span class="badge-preorder">PRE-ORDER</span>
+            Limited “Orange Hunting Season” BJJ Hoodie <span class="badge-preorder">PRE-ORDER</span>
           </h3>
           <p class="note" style="margin: .35rem 0 1rem;">
             Limited-edition camo vibe.
           </p>
-          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Limited Hoodie">
+          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Limited BJJ Hoodie">
             Send us a message
           </a>
         </div>
