--- a/merch.html
+++ b/merch.html
@@ -110,14 +110,14 @@
         </div>
 
                 <div class="program-card">
-          <img class="merch-thumb" src="Photos/judohoodie.png" alt="Restigouche Dojo Black Judo Hoodie" />
+          <img class="merch-thumb" src="Photos/judohoodie.png" alt="Restigouche Dojo Green Judo Hoodie" />
           <h3 class="merch-title">
-            Black Judo Hoodie <span class="badge-preorder">PRE-ORDER</span>
+            Green Judo Hoodie <span class="badge-preorder">PRE-ORDER</span>
           </h3>
           <p class="note" style="margin: .35rem 0 1rem;">
             Cozy mid-weight hoodie with front and back logo.
           </p>
-          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Black Judo Hoodie">
+          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Green Judo Hoodie">
             Send us a message
           </a>
         </div>
@@ -136,6 +136,19 @@
           </a>
         </div>
 
+                <div class="program-card">
+          <img class="merch-thumb" src="Photos/judocrewneck.png" alt="Restigouche Dojo Green Judo Crewneck" />
+          <h3 class="merch-title">
+            Green BJJ Crewneck <span class="badge-preorder">PRE-ORDER</span>
+          </h3>
+          <p class="note" style="margin: .35rem 0 1rem;">
+            Cozy mid-weight crewneck with front logo and back logo.
+          </p>
+          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Green BJJ Crewneck">
+            Send us a message
+          </a>
+        </div>
+
         <div class="program-card">
           <img class="merch-thumb" src="Photos/bjjtshirt.png" alt="Restigouche Dojo Classic BJJ T-Shirt" />
           <h3 class="merch-title">
@@ -145,6 +158,19 @@
             Everyday tee with classic crest.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Classic BJJ Tee">
+            Send us a message
+          </a>
+        </div>
+
+                <div class="program-card">
+          <img class="merch-thumb" src="Photos/judotshirt.png" alt="Restigouche Dojo Classic Judo T-Shirt" />
+          <h3 class="merch-title">
+            Classic Judo Tee <span class="badge-preorder">PRE-ORDER</span>
+          </h3>
+          <p class="note" style="margin: .35rem 0 1rem;">
+            Everyday tee with classic crest.
+          </p>
+          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Classic Judo Tee">
             Send us a message
           </a>
         </div>
