--- a/merch.html
+++ b/merch.html
@@ -176,7 +176,7 @@
         </div>
 
         <div class="program-card">
-          <img class="merch-thumb" src="Photos/merch/bjjhoodie-camo.jpg" alt="Restigouche Dojo Limited Camo BJJ Hoodie" />
+          <img class="merch-thumb" src="Photos/merch/bjjhoodie-camo.png" alt="Restigouche Dojo Limited Camo BJJ Hoodie" />
           <h3 class="merch-title">
             Limited “Hunting Season” BJJ Hoodie <span class="badge-preorder">PRE-ORDER</span>
           </h3>
@@ -189,7 +189,7 @@
         </div>
 
            <div class="program-card">
-          <img class="merch-thumb" src="Photos/merch/bjjhoodie-orange-camo.jpg" alt="Restigouche Dojo Limited Camo BJJ Hoodie" />
+          <img class="merch-thumb" src="Photos/merch/bjjhoodie-orange-camo.png" alt="Restigouche Dojo Limited Camo BJJ Hoodie" />
           <h3 class="merch-title">
             Limited “Orange Hunting Season” BJJ Hoodie <span class="badge-preorder">PRE-ORDER</span>
           </h3>
