--- a/merch.html
+++ b/merch.html
@@ -115,7 +115,7 @@
             Green Judo Hoodie <span class="badge-preorder">PRE-ORDER</span>
           </h3>
           <p class="note" style="margin: .35rem 0 1rem;">
-            Cozy mid-weight hoodie with front and back logo.
+            Cozy mid-weight hoodie with front and back logo. Available in black.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Green Judo Hoodie">
             Send us a message
@@ -142,7 +142,7 @@
             Green BJJ Crewneck <span class="badge-preorder">PRE-ORDER</span>
           </h3>
           <p class="note" style="margin: .35rem 0 1rem;">
-            Cozy mid-weight crewneck with front logo and back logo.
+            Cozy mid-weight crewneck with front logo and back logo. Available in black.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Green BJJ Crewneck">
             Send us a message
@@ -168,7 +168,7 @@
             Classic Judo Tee <span class="badge-preorder">PRE-ORDER</span>
           </h3>
           <p class="note" style="margin: .35rem 0 1rem;">
-            Everyday tee with classic crest.
+            Everyday tee with classic crest. Available in black.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Classic Judo Tee">
             Send us a message
