--- a/merch.html
+++ b/merch.html
@@ -94,10 +94,10 @@
     <div class="container">
       <h2 class="section-title">Available Designs</h2>
 
-      <div class="program-grid">
+      <div class="program-grid merch-grid">
         <!-- ===== COPY/PASTE this .program-card block to add more items ===== -->
         <div class="program-card">
-          <img class="merch-thumb" src="Photos/bjjhoodie.png" alt="Restigouche Dojo Black BJJ Hoodie" />
+          <img class="merch-thumb" src="Photos/bjjhoodie.png" alt="Restigouche Dojo Black BJJ Hoodie" loading="lazy" />
           <h3 class="merch-title">
             Black BJJ Hoodie <span class="badge-preorder">PRE-ORDER</span>
           </h3>
@@ -110,7 +110,7 @@
         </div>
 
                 <div class="program-card">
-          <img class="merch-thumb" src="Photos/judohoodie.png" alt="Restigouche Dojo Green Judo Hoodie" />
+          <img class="merch-thumb" src="Photos/judohoodie.png" alt="Restigouche Dojo Green Judo Hoodie" loading="lazy" />
           <h3 class="merch-title">
             Green Judo Hoodie <span class="badge-preorder">PRE-ORDER</span>
           </h3>
@@ -124,7 +124,7 @@
         
 
         <div class="program-card">
-          <img class="merch-thumb" src="Photos/bjjcrewneck.png" alt="Restigouche Dojo Black BJJ Crewneck" />
+          <img class="merch-thumb" src="Photos/bjjcrewneck.png" alt="Restigouche Dojo Black BJJ Crewneck" loading="lazy" />
           <h3 class="merch-title">
             Black BJJ Crewneck <span class="badge-preorder">PRE-ORDER</span>
           </h3>
@@ -137,7 +137,7 @@
         </div>
 
                 <div class="program-card">
-          <img class="merch-thumb" src="Photos/judocrewneck.png" alt="Restigouche Dojo Green Judo Crewneck" />
+          <img class="merch-thumb" src="Photos/judocrewneck.png" alt="Restigouche Dojo Green Judo Crewneck" loading="lazy" />
           <h3 class="merch-title">
             Green BJJ Crewneck <span class="badge-preorder">PRE-ORDER</span>
           </h3>
@@ -150,7 +150,7 @@
         </div>
 
         <div class="program-card">
-          <img class="merch-thumb" src="Photos/bjjtshirt.png" alt="Restigouche Dojo Classic BJJ T-Shirt" />
+          <img class="merch-thumb" src="Photos/bjjtshirt.png" alt="Restigouche Dojo Classic BJJ T-Shirt" loading="lazy" />
           <h3 class="merch-title">
             Classic BJJ Tee <span class="badge-preorder">PRE-ORDER</span>
           </h3>
@@ -163,7 +163,7 @@
         </div>
 
                 <div class="program-card">
-          <img class="merch-thumb" src="Photos/judotshirt.png" alt="Restigouche Dojo Classic Judo T-Shirt" />
+          <img class="merch-thumb" src="Photos/judotshirt.png" alt="Restigouche Dojo Classic Judo T-Shirt" loading="lazy" />
           <h3 class="merch-title">
             Classic Judo Tee <span class="badge-preorder">PRE-ORDER</span>
           </h3>
@@ -176,7 +176,7 @@
         </div>
 
         <div class="program-card">
-          <img class="merch-thumb" src="Photos/merch/bjjhoodie-camo.png" alt="Restigouche Dojo Limited Camo BJJ Hoodie" />
+          <img class="merch-thumb" src="Photos/merch/bjjhoodie-camo.png" alt="Restigouche Dojo Limited Camo BJJ Hoodie" loading="lazy" />
           <h3 class="merch-title">
             Limited “Hunting Season” BJJ Hoodie <span class="badge-preorder">PRE-ORDER</span>
           </h3>
@@ -189,7 +189,7 @@
         </div>
 
            <div class="program-card">
-          <img class="merch-thumb" src="Photos/merch/bjjhoodie-orange-camo.png" alt="Restigouche Dojo Limited Camo BJJ Hoodie" />
+          <img class="merch-thumb" src="Photos/merch/bjjhoodie-orange-camo.png" alt="Restigouche Dojo Limited Camo BJJ Hoodie" loading="lazy" />
           <h3 class="merch-title">
             Limited “Orange Hunting Season” BJJ Hoodie <span class="badge-preorder">PRE-ORDER</span>
           </h3>
@@ -202,7 +202,7 @@
         </div>
 
         <div class="program-card">
-          <img class="merch-thumb" src="Photos/merch/beanie.jpg" alt="Restigouche Dojo Beanie" />
+          <img class="merch-thumb" src="Photos/merch/beanie.jpg" alt="Restigouche Dojo Beanie" loading="lazy" />
           <h3 class="merch-title">
             Beanie <span class="badge-preorder">PRE-ORDER</span>
           </h3>
@@ -216,7 +216,7 @@
 
         <!-- Example “in stock sometimes” note (still pre-order wording) -->
         <div class="program-card">
-          <img class="merch-thumb" src="Photos/baseballhat.png" alt="Restigouche Dojo Baseball Hat" />
+          <img class="merch-thumb" src="Photos/baseballhat.png" alt="Restigouche Dojo Baseball Hat" loading="lazy" />
           <h3 class="merch-title">
             Baseball Hat <span class="badge-preorder">PRE-ORDER</span>
           </h3>
