--- a/merch.html
+++ b/merch.html
@@ -176,9 +176,9 @@
         </div>
 
         <div class="program-card">
-          <img class="merch-thumb" src="Photos/bjjhoodie-camo.png" alt="Restigouche Dojo Limited Camo BJJ Hoodie" loading="lazy" />
+          <img class="merch-thumb" src="Photos/bjjhoodie-camo.png" alt="Restigouche Dojo Limited Green Camo BJJ Hoodie" loading="lazy" />
           <h3 class="merch-title">
-            Limited “Hunting Season” BJJ Hoodie <span class="badge-preorder">PRE-ORDER</span>
+            Limited “Green Hunting Season” BJJ Hoodie <span class="badge-preorder">PRE-ORDER</span>
           </h3>
           <p class="note" style="margin: .35rem 0 1rem;">
             Limited-edition camo vibe.
