--- a/merch.html
+++ b/merch.html
@@ -178,7 +178,7 @@
         <div class="program-card">
           <img class="merch-thumb" src="Photos/bjjhoodie-camo.png" alt="Restigouche Dojo Limited Green Camo BJJ Hoodie" loading="lazy" />
           <h3 class="merch-title">
-            Limited “Green Hunting Season” BJJ Hoodie <span class="badge-preorder">PRE-ORDER</span>
+            Limited “Hunting Season” Green BJJ Hoodie <span class="badge-preorder">PRE-ORDER</span>
           </h3>
           <p class="note" style="margin: .35rem 0 1rem;">
             Limited-edition camo vibe.
@@ -191,7 +191,7 @@
            <div class="program-card">
           <img class="merch-thumb" src="Photos/bjjhoodie-orange-camo.png" alt="Restigouche Dojo Limited Camo BJJ Hoodie" loading="lazy" />
           <h3 class="merch-title">
-            Limited “Orange Hunting Season” BJJ Hoodie <span class="badge-preorder">PRE-ORDER</span>
+            Limited “Hunting Season” Orange BJJ Hoodie <span class="badge-preorder">PRE-ORDER</span>
           </h3>
           <p class="note" style="margin: .35rem 0 1rem;">
             Limited-edition camo vibe.
