--- a/merch.html
+++ b/merch.html
@@ -84,7 +84,7 @@
       <p style="max-width: 900px; margin: 0 auto; color:#EEE;">
         Most items are <strong>pre-ordered</strong> so we can get the
         right sizes and styles for everyone. A small number may be in stock from time to time, but availability changes quickly.
-        To place an order or ask a question, click <a class="learn-more" href="aboutus.html#contact">Send us a message</a>.
+        To place an order or ask a question, click <a class="learn-more" href="aboutus.html#contact">Contact us</a>.
       </p>
     </div>
   </section>
@@ -105,7 +105,7 @@
             Cozy mid-weight hoodie with front and back logo.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Black BJJ Hoodie">
-            Send us a message
+            Contact us
           </a>
         </div>
 
@@ -118,7 +118,7 @@
             Cozy mid-weight hoodie with front and back logo. Available in black.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Green Judo Hoodie">
-            Send us a message
+            Contact us
           </a>
         </div>
         
@@ -132,7 +132,7 @@
             Cozy mid-weight crewneck with front logo and back logo.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Black BJJ Crewneck">
-            Send us a message
+            Contact us
           </a>
         </div>
 
@@ -145,7 +145,7 @@
             Cozy mid-weight crewneck with front logo and back logo. Available in black.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Green BJJ Crewneck">
-            Send us a message
+            Contact us
           </a>
         </div>
 
@@ -158,7 +158,7 @@
             Everyday tee with classic crest.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Classic BJJ Tee">
-            Send us a message
+            Contact us
           </a>
         </div>
 
@@ -171,7 +171,7 @@
             Everyday tee with classic crest. Available in black.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Classic Judo Tee">
-            Send us a message
+            Contact us
           </a>
         </div>
 
@@ -184,7 +184,7 @@
             Limited-edition camo vibe.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Limited BJJ Hoodie">
-            Send us a message
+            Contact us
           </a>
         </div>
 
@@ -197,7 +197,7 @@
             Limited-edition camo vibe.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Limited BJJ Hoodie">
-            Send us a message
+            Contact us
           </a>
         </div>
 
@@ -210,7 +210,7 @@
             Cold-weather essential with subtle crest. Seasonal restocks.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Beanie">
-            Send us a message
+            Contact us
           </a>
         </div>
 
@@ -224,7 +224,7 @@
             Clean, structured fit. Occasionally in stock, but most orders are pre-order.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Baseball Hat">
-            Send us a message
+            Contact us
           </a>
         </div>
         <!-- ===== END COPY BLOCK ===== -->
