--- a/merch.html
+++ b/merch.html
@@ -105,7 +105,7 @@
             Cozy mid-weight hoodie with front and back logo.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Black BJJ Hoodie">
-            Contact us
+            Send us a message
           </a>
         </div>
 
@@ -118,7 +118,7 @@
             Cozy mid-weight hoodie with front and back logo. Available in black.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Green Judo Hoodie">
-            Contact us
+            Send us a message
           </a>
         </div>
         
@@ -132,7 +132,7 @@
             Cozy mid-weight crewneck with front logo and back logo.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Black BJJ Crewneck">
-            Contact us
+            Send us a message
           </a>
         </div>
 
@@ -145,7 +145,7 @@
             Cozy mid-weight crewneck with front logo and back logo. Available in black.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Green BJJ Crewneck">
-            Contact us
+            Send us a message
           </a>
         </div>
 
@@ -158,7 +158,7 @@
             Everyday tee with classic crest.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Classic BJJ Tee">
-            Contact us
+            Send us a message
           </a>
         </div>
 
@@ -171,7 +171,7 @@
             Everyday tee with classic crest. Available in black.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Classic Judo Tee">
-            Contact us
+            Send us a message
           </a>
         </div>
 
@@ -184,7 +184,7 @@
             Limited-edition camo vibe.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Limited BJJ Hoodie">
-            Contact us
+            Send us a message
           </a>
         </div>
 
@@ -197,7 +197,7 @@
             Limited-edition camo vibe.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Limited BJJ Hoodie">
-            Contact us
+            Send us a message
           </a>
         </div>
 
@@ -210,7 +210,7 @@
             Cold-weather essential with subtle crest. Seasonal restocks.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Beanie">
-            Contact us
+            Send us a message
           </a>
         </div>
 
@@ -224,7 +224,7 @@
             Clean, structured fit. Occasionally in stock, but most orders are pre-order.
           </p>
           <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Baseball Hat">
-            Contact us
+            Send us a message
           </a>
         </div>
         <!-- ===== END COPY BLOCK ===== -->
