Update product name from BJJ to Judo Crewneck

--- a/merch.html
+++ b/merch.html
@@ -139,12 +139,12 @@
                 <div class="program-card">
           <img class="merch-thumb" src="Photos/judocrewneck.png" alt="Restigouche Dojo Green Judo Crewneck" loading="lazy" />
           <h3 class="merch-title">
-            Green BJJ Crewneck <span class="badge-preorder">PRE-ORDER</span>
+            Green Judo Crewneck <span class="badge-preorder">PRE-ORDER</span>
           </h3>
           <p class="note" style="margin: .35rem 0 1rem;">
             Cozy mid-weight crewneck with front logo and back logo. Available in black.
           </p>
-          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Green BJJ Crewneck">
+          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Green Judo Crewneck">
             Send us a message
           </a>
         </div>
