Update hoodie descriptions and alt texts

--- a/merch.html
+++ b/merch.html
@@ -176,27 +176,27 @@
         </div>
 
         <div class="program-card">
-          <img class="merch-thumb" src="Photos/bjjhoodie-camo.png" alt="Restigouche Dojo Limited Green Camo BJJ Hoodie" loading="lazy" />
+          <img class="merch-thumb" src="Photos/bjjhoodie-camo.png" alt="Restigouche Dojo Limited Green Camo Hoodie" loading="lazy" />
           <h3 class="merch-title">
-            Limited “Hunting Season” Green BJJ Hoodie <span class="badge-preorder">PRE-ORDER</span>
+            Limited “Hunting Season” Green Hoodie <span class="badge-preorder">PRE-ORDER</span>
           </h3>
           <p class="note" style="margin: .35rem 0 1rem;">
             Limited-edition camo vibe.
           </p>
-          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Limited BJJ Hoodie">
+          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Limited Hoodie">
             Send us a message
           </a>
         </div>
 
            <div class="program-card">
-          <img class="merch-thumb" src="Photos/bjjhoodie-orange-camo.png" alt="Restigouche Dojo Limited Camo BJJ Hoodie" loading="lazy" />
+          <img class="merch-thumb" src="Photos/bjjhoodie-orange-camo.png" alt="Restigouche Dojo Limited Camo Hoodie" loading="lazy" />
           <h3 class="merch-title">
-            Limited “Hunting Season” Orange BJJ Hoodie <span class="badge-preorder">PRE-ORDER</span>
+            Limited “Hunting Season” Orange Hoodie <span class="badge-preorder">PRE-ORDER</span>
           </h3>
           <p class="note" style="margin: .35rem 0 1rem;">
             Limited-edition camo vibe.
           </p>
-          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Limited BJJ Hoodie">
+          <a href="aboutus.html#contact" class="btn btn-secondary" aria-label="Send us a message to pre-order the Limited Hoodie">
             Send us a message
           </a>
         </div>
